syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.exercise.clientstreaming";
option java_outer_classname = "ClientStreamingProto";
option objc_class_prefix = "HLW";

// the service definition
service LongGreetService {
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}

// the request message
message LongGreetRequest {
    string firstName = 1;
    string lastName = 2;
}

// the response message
message LongGreetResponse {
    string result = 1;
}